<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fr.usagymancenis.usagym.login.LoginActivity">

    <Button
        android:id="@+id/login_other_users"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />

    <Button
        android:id="@+id/login_no_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_toEndOf="@id/login_other_users"
        android:layout_toStartOf="@+id/login_new_user"
        android:background="@android:color/transparent"
        android:text="@string/login_connect_without_account"
        android:visibility="invisible" />

    <Button
        android:id="@+id/login_new_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <!--TODO
        CircleImageView-->
        <ImageView
            android:id="@+id/login_account_profile_photo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/login_profile_photo_description"
            android:src="@drawable/mockups_ico_128"/>


        <org.droidparts.widget.ClearableEditText
            android:id="@+id/login_account_id"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_account_profile_photo"
            android:hint="@string/login_pseudo_hint"
            android:maxLines="1"/>

        <org.droidparts.widget.ClearableEditText
            android:id="@+id/login_account_mdp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_account_id"
            android:hint="@string/login_password_hint"
            android:maxLines="1"/>
        <CheckBox
            android:id="@+id/login_account_remember_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_account_mdp"
            android:text="@string/login_remember_me"/>
        <!--TODO :
        android:inputType="textPassword"-->

        </RelativeLayout>

</RelativeLayout>
